# avalicaco

./: docker-compose.yml  ideia.md
backend/: Cargo.toml  restartdb.sh
backend/migrations/2025-01-03-020607_create_posts/: down.sql  up.sql
backend/src/: apidoc.rs  auth.rs  db.rs  endpoints.rs  main.rs
backend/src/db/: evaluation_db.rs  models.rs  prelude.rs  schema.rs  suggestion_db.rs
backend/src/endpoints/: auth.rs  evaluations.rs  prelude.rs  suggestions.rs  users.rs
