[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
actix-web = "4.9.0" 
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["chrono", "postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
serde = { version = "1.0.217", features = ["derive"] }
utoipa = { version = "5.3.0", features = ["actix_extras", "chrono"] }
utoipa-actix-web = "0.1.2"
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.2.0", features = ["actix-web"] }
